# frandom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Random.h
src/: Random.cpp  frandom.cpp
